crates/pg_syntax/tests/snapshots/postgres_regress/json@275.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsb FROM json_populate_record(NULL::jsrec, '{\"jsb\": true}') q;"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "jsb"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..68
    List@16..65
      FuncCall@16..65
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..65
          Sconst@50..65 "'{\"jsb\": true}'"
    Ascii41@65..66 ")"
    Whitespace@66..67 " "
    Alias@67..68
      Ident@67..68 "q"
  Ascii59@68..69 ";"

