crates/pg_syntax/tests/snapshots/postgres_regress/json@278.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsb FROM json_populate_record(NULL::jsrec, '{\"jsb\": \"abc\"}') q;"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "jsb"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..69
    List@16..66
      FuncCall@16..66
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..66
          Sconst@50..66 "'{\"jsb\": \"abc\"}'"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    Alias@68..69
      Ident@68..69 "q"
  Ascii59@69..70 ";"

