crates/pg_syntax/tests/snapshots/postgres_regress/json@282.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsa FROM json_populate_record(NULL::jsrec, '{\"jsa\": 123}') q;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "jsa"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..67
    List@16..64
      FuncCall@16..64
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..64
          Sconst@50..64 "'{\"jsa\": 123}'"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    Alias@66..67
      Ident@66..67 "q"
  Ascii59@67..68 ";"

