crates/pg_syntax/tests/snapshots/postgres_regress/json@284.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsa FROM json_populate_record(NULL::jsrec, '{\"jsa\": [\"aaa\", null, [1, 2, \"3\", {}], { \"k\" : \"v\" }]}') q;"
---
SelectStmt@0..110
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "jsa"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..109
    List@16..106
      FuncCall@16..106
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..106
          Sconst@50..106 "'{\"jsa\": [\"aaa\", null ..."
    Ascii41@106..107 ")"
    Whitespace@107..108 " "
    Alias@108..109
      Ident@108..109 "q"
  Ascii59@109..110 ";"

